src/sass/static/trade.scss
/* ... */
@media all and (max-width: 640px) {
  #trading_socket_container {
    #contract_market_form_container{
      height: auto;
    }
    #expiry_time{
      width: 175px;
    }
    #contract_form_content{
      margin-top: 0px;
    }
    #contract_form_content_wrapper {
      flex-direction: column;
    }
    .nav_placeholder {
      display: flex;
    }
    #contract_symbol_container {
      text-align: center;
      .row {
        flex-direction: column;
        .col {
          margin-bottom: 5px;
        }
      }
      #contract_markets_container {
        margin-right: 0;
        text-align: inherit;
      }
    }
    #contract_prices_container {
      #contract_purchase_spots{
        height: auto;
      }
      #price_container_top {
        margin-right: 0 !important;
      }
      .price_wrapper {
        flex-direction: row !important;
         &.small{
          width: auto;
        }
      }
      .row {
        flex-direction: column;
        .col {
          margin-bottom: 5px;
          &.price_comment {
            margin: 0;
          }
        }
      }
    }
  }
  ul#contract_form_name_nav {
    height: auto;
    > li {
      float: none;
      width: 100%;
    }
  }
  #trading_socket_container #contract_prices_container .price_container .price_wrapper {
    width: 100%;
     &.small{
      width: auto;
    }
  }
}

@media all and (max-width: 768px) {
  #trading_socket_container {
    #contract_form_content_wrapper {
      flex-direction: column;
      >.col{
        flex: 1 0 auto;
      }
    }
    #contract_form_content{
      margin-top: 20px;
    }
    #contract_prices_container {
      margin-left: 0;
    }
  }
}

#spot {
  line-height: 25px;
  white-space: nowrap;
  padding: 3px;
  border-radius: 5px;
  margin-right: 8px;
  &.error{
    font-style: italic;
  }
}

#trading_socket_container #contract_form_name_nav {
  border-bottom: none;
  font-size: $FONT_SIZE_N;
  > li {
    cursor: pointer;
  }
}

#content ul.tm-ul li {
  &.active, &.ui-tabs-active {
    background: $COLOR_BLUE;
    color: $COLOR_WHITE;
  }
}

#trading_socket_container #contract_form_name_nav > li {
  padding: 0;
  a.tm-a {
    padding: 0 5px;
    width: auto;
    font-size: 85%;
    line-height: 28px;
  }
  .tm-ul-2 {
    top: 29px;
    margin-top: -1px;
    border-top: 1px solid $COLOR_GRAY;
  }
}

#analysis_daily_prices_form {
  text-align: center;
  input {
    margin: 0 10px;
  }
}


/*
 * these styles are for trade analysis and will be removed
 *
 * DO NOT ADD ANY COMMON STYLING BELOW THIS. ALL OTHER STYLING GO ABOVE THIS
 */
#trading_bottom_content {
    margin-top: 15px;
    font-size: 1rem;
    .tab-menu {
        background: transparent !important;
        border:0 !important;
        height: auto !important;
    }
    ul#betsBottomPage {
        @include ul_segmented_navigation;
        font-size: 85%;
        border-bottom: none;
        li {
            @include li_segmented_element;
            background: transparent;
            border-radius: 0;
            padding: 6px 0;
            a {
                line-height: 1;
                top: 0;
                font-size: 1rem;
            }
            &.active {
                a {
                    color: inherit;
                    background-image: none;
                }
            }
        }
    }
    #last_digit_histo_form {
        overflow: hidden;
        margin-bottom: 20px;
    }
}
@media all and (max-width: 640px) {
    #trading_bottom_content {
        ul#betsBottomPage {
            flex-direction: column;
        }
    }
}
/*
 * DO NOT ADD ANY COMMON STYLING BELOW THIS. ALL OTHER STYLING GO ABOVE THIS
 */

